vlib/v/parser/tests/fn_decl_unexpected_eof.out
vlib/v/parser/tests/fn_decl_unexpected_eof.vv:1:12: error: unexpected eof, expecting `}`
    1 | fn main() {
      |            ^
